syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Order {
    string order_id = 1;

    enum State {
        Pending = 0;
        Completed = 1;
        Rejected = 2;
        Issue = 3;
    }
    State state = 2;

    uint64 bet = 3;
    uint64 win = 4;

    string game_id = 5;
    string user_id = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    google.protobuf.Timestamp completed_at = 9;
}